fix z-index issues

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ main {
    padding-top: 10px;
 
    position: relative;
-   z-index: -1;
+   z-index: 1;
 
    box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.5);
 }
@@ -73,6 +73,9 @@ footer {
    justify-content: center;
    align-items: start;
    padding-bottom: 60px;
+
+   position: relative;
+   z-index: 2;
 }
 
 footer ul {
@@ -242,6 +245,9 @@ header {
    text-align: center;
    background-color: transparent;
    user-select: none;
+
+   position: relative;
+   z-index: 2;
 }
 
 header h1 {
